# pinetime-tock

./: .gitignore  .gitmodules  README.md
board/: Cargo.toml  Makefile  layout.ld
board/pinetime/: Cargo.toml  Makefile  build.rs  layout.ld
board/pinetime/src/: io.rs  main.rs
scripts/: cgdb.sh  gdb.sh  pinetime.gdb  session.gdb  start_gdb_server_jlink.sh
