[package]
name = "pine_time"
version = "0.1.0"
authors = ["Jay Kickliter <jay@kickliter.com>"]
edition = "2018"
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
cortexm4 = { path = "../tock/arch/cortex-m4" }
capsules = { path = "../tock/capsules" }
kernel = { path = "../tock/kernel" }
nrf52832 = { path = "../tock/chips/nrf52832" }
nrf52dk_base = { path = "../tock/boards/nordic/nrf52dk_base" }
components = { path = "../tock/boards/components" }
