[package]
name = "pine_time"
version = "0.1.0"
authors = ["Jay Kickliter <jay@kickliter.com>"]
edition = "2018"
build = "build.rs"

[profile.dev]
debug = true
lto = false
opt-level = "z"
panic = "abort"

# Optimize deps in debug profile to save space.
[profile.dev.package."*"]
debug = true
opt-level = "z"

[profile.release]
debug = true
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
capsules = { path = "../tock/capsules" }
components = { path = "../tock/boards/components" }
cortexm4 = { path = "../tock/arch/cortex-m4" }
kernel = { path = "../tock/kernel" }
nrf52832 = { path = "../tock/chips/nrf52832" }
nrf52dk_base = { path = "../tock/boards/nordic/nrf52dk_base" }
